--- a/DEV_cdn_version/index.html
+++ b/DEV_cdn_version/index.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li v-for="ele, index in list" :key="index" :style="{'background-color': index % 2 == 0 ? 'red': 'green'}">
                         <div :id="index" >
-                            {{ele.name}}
+                            {{ele.name}},
                             {{ele.timeZone}},
                             {{getTime(ele.timeZone)}}
                         </div>
